--- a/package.json
+++ b/package.json
@@ -3,14 +3,34 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "PORT=8000 node ./bin/www",
+    "test": "npx jest --testTimeout=10000 --forceExit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
+    "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
+    "jest": "^26.0.1",
+    "jquery": "^3.5.1",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
+    "passport-stub": "^1.1.1",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^5.21.11",
+    "supertest": "^4.0.2",
+    "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
