add env for deploy

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,7 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=scheduler
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
+
+HEROKU_URL=https://
+GITHUB_CLIENT_ID=ee11f3fe56b392c2f4d9
+GITHUB_CLIENT_SECRET=3ea659a9b3e1dfde660764426255fd0d32e6ba53
